--- a/gal.html
+++ b/gal.html
@@ -16,7 +16,7 @@
 <div class="menuToggle" onclick="toggleMenu();"></div>
   <ul class="navigation" onclick="toggleMenu();">
       <li><a href="index.html" onclick="toggleMenu();"> Home </a></li>
-      <li><a href="#hours" onclick="toggleMenu();"> Hours & Location </a></li>
+      <li><a href="index.html#hours" onclick="toggleMenu();"> Hours & Location </a></li>
       <li><a href="gal.html" onclick="toggleMenu();"> Gallery </a></li>
       <li><a href="index.html#about" onclick="toggleMenu();"> Contact Us </a></li>
   </ul>
