--- a/gal.html
+++ b/gal.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name ="viewport" content= "width=device-width, initial-scale=1.0">
-<title> CNY Responsive page </title>
+<title> CNY Elite Barbershop </title>
 <link rel="stylesheet" href="style2.css">
 
 </head>
