--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <p style="text-align: center"> or</p>
   <a href="https://www.instagram.com/cnyelitebarbers/?hl=en" alt=""><img src="instagram.png" alt=""></a>
   <a href="https://www.facebook.com/CNY-Elite-Barbers-109050470475084/" alt=""> <img src="facebook.png" alt=""></a>
-    <img src="gmail.png" alt="">
+  <a href="mailto: mustafasafey6@gmail.com" alt=""> <img src="gmail.png" alt=""></a>
 
 </div>
   </div>
